# j6.x2

./: README.md
j6_description/: CMakeLists.txt  package.xml
j6_description/config/: mirror.param.yaml  simulator_model.param.yaml
j6_description/mesh/: BYD_J6.dae
j6_description/urdf/: vehicle.xacro
j6_gen1_description/: CMakeLists.txt  package.xml
j6_gen1_description/config/: simulator_model.param.yaml
j6_gen1_description/urdf/: vehicle.xacro
j6_gen1_launch/: CMakeLists.txt  package.xml
j6_gen1_launch/launch/: vehicle_interface.launch.xml
j6_launch/: CMakeLists.txt  package.xml
